objects/KYC_Callout_results__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>KYC Callout results</relationshipLabel>
        <relationshipName>KYC_Callout_results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attachments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Attachments</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>KYC Callout results</relationshipLabel>
        <relationshipName>KYC_Callout_results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>KYC_description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>KYC description</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>KYC_summary__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>KYC summary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Provider__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Provider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Result_Time__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Result Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Service_Called__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Service Called</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>KYC_Callout_results</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>KYC Callout results</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>KYC Callout results Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>KYC Callout results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>